# xp_wellys_vfr_atc

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  README.md  THIRD_PARTY.md  compile_commands.json  skunkcrafts_updater.cfg  skunkcrafts_updater_sizeslist.txt  skunkcrafts_updater_whitelist.txt
.claude/tasks/: M11_de_bzf_trainer.md
.github/: FUNDING.yml
.github/workflows/: build.yml
build-ci/: Makefile  atc_repl  xp_wellys_devfr_atc_tests
build-ci/tests/: Makefile
data/: atc_prompt_templates.json  models_catalog.json  settings.json
data/airspaces/: de_airspace.txt
data/vrps/: airport_vrps.json
docs/: README.md  architecture-analysis.md  howto_us_procedure_example.md  phase2-smoke-test.md  skunkcrafts_updater_howto.md  testing.md  xpwellysatc_manual_de.md  xpwellysatc_manual_en.md
docs/bzf/: README.md  bnetza_pruefungsfragen_2024.txt  bzf_coverage.md  dfs_nfl_sprechfunk_2024.txt  nfl_funk_teilb_2010.txt  strict_mode_test_edny.md
docs/demo-flights/: 01_edny_rundflug.md  02_edny_edja_ueberlandflug.md  03_testflug_edny_edty.md
docs/icao/: README.md  icao_coverage.md
mac_x64/: libpiper.dylib
scripts/: fetch_voice_hashes.sh
spikes/spike_e2e/: .gitignore  CMakeLists.txt  README.md  RESULTS.md
spikes/spike_e2e/prompts/: atc_system.txt
spikes/spike_e2e/src/: i_language_model.hpp  i_speech_to_text.hpp  i_text_to_speech.hpp  llama_lm.cpp  llama_lm.hpp  piper_tts.cpp  piper_tts.hpp  spike_e2e.cpp  wav.cpp  wav.hpp  whisper_stt.cpp  whisper_stt.hpp
spikes/spike_llama/: CMakeLists.txt  README.md
spikes/spike_llama/prompts/: 01_taxi_clearance.txt  02_takeoff_clearance.txt  03_traffic_advisory.txt
spikes/spike_llama/scripts/: download_model.sh
spikes/spike_llama/src/: spike_llama.cpp
spikes/spike_piper/: .gitignore  CMakeLists.txt  README.md
spikes/spike_piper/scripts/: download_voice.sh
spikes/spike_piper/src/: spike_piper.cpp
spikes/spike_piper/test_text/: atc_50_word.txt
spikes/spike_whisper/: .gitignore  CMakeLists.txt  README.md
spikes/spike_whisper/scripts/: generate_test_audio.sh
spikes/spike_whisper/src/: spike_whisper.cpp
src/: main.cpp
src/atc/: atc_session.cpp  atc_session.hpp  atc_state_machine.cpp  atc_state_machine.hpp  atc_templates.cpp  atc_templates.hpp  atis_generator.cpp  atis_generator.hpp  bzf_compliance.cpp  bzf_compliance.hpp  de_phraseology.cpp  de_phraseology.hpp  en_phraseology.cpp  en_phraseology.hpp  engine.cpp  engine.hpp  flight_phase.cpp  flight_phase.hpp  initial_call_conformance.cpp  initial_call_conformance.hpp  intent_parser.cpp  intent_parser.hpp  intent_rules.cpp  intent_rules.hpp  landing_sequence.cpp  landing_sequence.hpp  phraseology_hints.cpp  phraseology_hints.hpp  traffic_advisor.cpp  traffic_advisor.hpp  traffic_dialog.cpp  traffic_dialog.hpp
src/audio/: audio_player.cpp  audio_player.hpp  audio_recorder.cpp  audio_recorder.hpp  mic_permission.hpp  mic_permission.mm  mic_permission_win.cpp  ptt_input.cpp  ptt_input.hpp
src/backends/: downloader.cpp  downloader.hpp  i_language_model.hpp  i_speech_to_text.hpp  i_text_to_speech.hpp  llama_lm.cpp  llama_lm.hpp  loader.cpp  loader.hpp  manager.cpp  manager.hpp  mistral_lm.cpp  mistral_lm.hpp  mistral_stt.cpp  mistral_stt.hpp  mistral_tts.cpp  mistral_tts.hpp  (+12 more)
tests/: CMakeLists.txt  module_reset_listener.cpp  test_airport_vrps.cpp  test_atis_generator_de.cpp  test_atis_generator_en.cpp  test_audit_logging.cpp  test_begin_fresh_flight.cpp  test_bzf_compliance.cpp  test_cross_country_log.cpp  test_de_phraseology.cpp  test_en_phraseology.cpp  test_facility_classification.cpp  test_frequency_classification.cpp  test_info_radio_flow.cpp  test_initial_call_conformance.cpp  test_initial_call_conformance_en.cpp  test_intent_parser.cpp  test_intent_parser_de.cpp  test_intent_rules_runway_vacated_veto.cpp  test_keychain.cpp  test_landing_sequence.cpp  test_model_manifest.cpp  test_openai_common.cpp  test_openair_db.cpp  test_phraseology_hints.cpp  test_post_landing_idle.cpp  test_prompt_whitelist_drift.cpp  test_readback_high_conf_gate.cpp  test_readback_strict.cpp  test_runway_lock.cpp  test_state_history.cpp  test_state_revert_guard.cpp  test_traffic_advisor.cpp  test_traffic_context.cpp  test_traffic_dialog.cpp  test_traffic_geometry.cpp  test_traffic_phase_classifier.cpp  test_was_airborne_reset.cpp
tests/fixtures/: openair_sample.txt  traffic_advisory_converging.json  traffic_lszh_basic.json  traffic_pattern_lszh_3in_1on.json  traffic_taxi_conflict.json
tests/fixtures/user_prefs/: airport_vrps.json
testscripts/: bad_01_taxi_on_tower_eu.json  bad_02_ready_for_departure_on_ground_us.json  bad_03_no_position_on_initial_call.json  bad_04_inbound_while_parked.json  bad_05_runway_vacated_while_airborne.json  bad_06_profanity_escalation.json  bad_07_low_quality_transcript.json  bad_08_self_correction.json  bad_09_flight_following_on_tower_us.json  bad_10_eu_vfr_no_squawk.json  bad_11_eu_flight_following_not_available.json  bad_12_departure_cleared_auto_correct_airborne.json  bad_12b_departure_cleared_suppression_crosscountry.json  bad_13_landing_cleared_on_ground_90s.json  bad_14_pattern_entry_after_landing.json  bad_15_continue_approach_readback_us.json  bad_16_taxi_cleared_pilot_on_tower_eu.json  bad_17_departure_cleared_dwell_then_takeoff_eu.json  bad_18_taxi_parking_after_landing_eu.json  bad_19_taxi_readback_whisper_mistranscription.json  bad_20_runway_hyphen_whisper.json  bad_21_garbled_say_again_escalation.json  bad_22_takeoff_readback_take_of_whisper.json  bad_23_request_taxi_after_landing_history.json  departure_readback_welded_de.json  flow_02_eu_pattern_bern.json  flow_03_us_pattern_kpao.json  flow_04_eu_crosscountry_departure.json  flow_05_us_crosscountry_flight_following.json  flow_06_eu_multi_crosscountry.json  flow_07_us_multi_crosscountry.json  flow_08_us_ctaf_kwvi.json  flow_edny_vrp_inbound_de.json  flow_kvrb_part_time_tower_us.json  flow_lszg_definitive_eu.json  flow_parked_taxi_eu.json  flow_parked_taxi_us.json  lszh_cross_country.json  lszh_ground_taxi.json  lszr_pattern.json  (+5 more)
win_x64/: xp_wellys_vfr_atc.xpl
(+77 files in other folders)
